# rust-wasm-freshdesk-app

./: README.md
rust-wasm/: Cargo.toml  README.md
rust-wasm/src/: lib.rs
