[package]
name = "rust-wasm"
version = "0.0.1"
authors = ["Kaustav Das Modak <kaustav.dasmodak@freshworks.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
